syntax = "proto3";
option go_package = "wallet_svc/proto/transaction_service/v1;transaction";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package proto.transaction_service.v1;

service transactionService {
    rpc CreateTransaction (CreateTransactionRequest) returns (MutationTransResponse) {}
}
  
message Transaction {
  int32 id = 1;
  int32 userID = 2;
  float balance = 3;
  string category = 4;
  string type = 5;
  float amount = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}
  

message CreateTransactionRequest {
  int32 fromID = 1;
  int32 toID = 2;
  string type = 3;
  float amount = 4;
}
  
message MutationTransResponse {
  string message = 1;
}