syntax = "proto3";
option go_package = "assignment5/cashflow-svc/internal/proto/user_service/v1;user";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package internal.proto.user_service.v1;


service UserService {
  rpc GetUsers (google.protobuf.Empty) returns (GetUsersResponse) {
      option (google.api.http) = {
        get: "/v1/users"
      };
    }
    rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse) {
      option (google.api.http) = {
        get: "/v1/users/{id}"
      };
    }
    rpc CreateUser (CreateUserRequest) returns (MutationResponse) {
      option (google.api.http) = {
        post: "/v1/users",
        body: "*"
      };
    }
  }
  
  message User {
    int32 id = 1;
    string fullname = 2;
    string email = 3;
    string password = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
  }
  
  message GetUsersResponse {
    repeated User users = 1;
  }
  
  message GetUserByIDRequest {
    int32 id = 1;
  }
  
  message GetUserByIDResponse {
    User user = 1;
  }

  message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
  }
  
  message MutationResponse {
    string message = 1;
  }